# parl_AI

./: .dockerignore  .env.template  .gcloudignore  .gitattributes  .gitignore  App.py  Dockerfile  LICENSE  README.md  app_ideas.py  memory_leak_test.py  pyproject.toml  requirements.txt  robots.txt  ruff.toml  sitemap.xml  streamlit_app.py  test_app.py
.github/workflows/: deploy.yml  quality-assurance.yml  release.yml
.streamlit/: config.toml
EDA/: explore_debates_manifestos.ipynb
EDA/PopBERT/: boilderplate_popbert.ipynb
EDA/manifesto_berta/: boilerplate_manifesto_berta.ipynb  classify_boilerplate.ipynb
RAG/: loading_speeches.py  rag.ipynb
RAG/database/: vector_database.py
RAG/evaluation/: compute_metrics.ipynb  create_plots_presentation.ipynb  evaluation.py  ragas.ipynb  run_experiment.ipynb  visualize_experiments.ipynb
RAG/local_tests/: test.ipynb
RAG_clean/: balanced_retrieval_example.ipynb  create_db_debates.ipynb  create_db_manifesto.ipynb  example_usage.ipynb
app_utils/: language_dictionary.csv  translate.py
data_scraping/: europarl_debates.ipynb  europarl_manifestos.ipynb
pages/: 1_FAQ.py  1_Project.py  1_Was ist Electify?.py  1_Was_ist_Electify?.py  2_Team.py  2_Wer sind wir?.py  2_Wer_sind_wir?.py  3_Impressum.py  4_Datenschutzerklärung.py
pipeline/: create_database.py  push_to_huggingface.py
questions/: simple_questions.csv
streamlit/: app.py  chatbot.py  europarl_ai_app.py  response_generator.py
streamlit_app/: example_prompts.csv  index.html  party_dict.json
tests/: test_app.py  test_db.py  test_streamlit.py
(+284 files in other folders)
